--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ add_executable(Test_2 Weed1_Test/Test_2.cpp)
 add_executable(Test_3 Weed1_Test/Test_3.cpp)
 add_executable(Test_4 main_Test/Test_4.cpp)
 add_executable(huffman Weed9_2_Test/huffman.cpp)
+add_executable(dijkstra Weed11_Test/dijkstra.cpp)
+add_executable(kruskal Weed11_Test/kruskal.cpp)
+add_executable(prim Weed11_Test/prim.cpp)
+add_executable(topsort Weed11_Test/topsort.cpp)
 #add_executable(arraylist Weed2_H_Test/arraylist.cpp)
 #add_executable(main Weed2_Test/main.cpp)
 #include_directories(C:/cliongongzuodian/Weed2_H_Test)
