--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(dijkstra Weed11_Test/dijkstra.cpp)
 add_executable(kruskal Weed11_Test/kruskal.cpp)
 add_executable(prim Weed11_Test/prim.cpp)
 add_executable(topsort Weed11_Test/topsort.cpp)
+add_executable(IndexSearch Weed12_IndexSearch_Test/IndexSearch.cpp)
 #add_executable(arraylist Weed2_H_Test/arraylist.cpp)
 #add_executable(main Weed2_Test/main.cpp)
 #include_directories(C:/cliongongzuodian/Weed2_H_Test)
@@ -20,7 +21,7 @@ add_executable(topsort Weed11_Test/topsort.cpp)
 #target_link_libraries(arraylist Threads::Threads)
 #add_executable(C:/cliongongzuodian/Weed2_H_Test)
 add_library(cliongongzuodian STATIC
-        Weed2_H_Test/arraylist.cpp
+        Weed2_H_Test/arraylist_Test2.cpp
         Weed3_H_Test/linkedlist.cpp
         Weed4_H_Test/LinkStack.cpp
         Weed4_H_Test/SqStack.cpp
@@ -31,7 +32,9 @@ add_library(cliongongzuodian STATIC
         Weed7_H_Test/BiTree.cpp
         Weed8_H_Test/BiThree8.cpp
         Weed9_H_Test/Thread.cpp
-        Weed10_H_Test/graph.cpp )
+        Weed10_H_Test/graph.cpp
+        #十一周的已在上面生成add_executable
+        Weed12_H_Test/arraylist_Test12.cpp)
 target_include_directories(cliongongzuodian
         PUBLIC
         ${PROJECT_SOURCE_DIR}/include
@@ -46,6 +49,8 @@ add_executable(WeedTest
         Weed8_Test/main.cpp
         Weed9_Test/main.cpp
         Weed10_Test/main.cpp
+        #十一周的已在上面生成add_executable
+        Weed12_Test/main.cpp
         )
 #链接可执行文件和静态库
 #target_link_libraries(WeedTest2
@@ -57,3 +62,4 @@ target_link_libraries(WeedTest
         PRIVATE
         cliongongzuodian
         )
+
