--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,10 @@ add_library(cliongongzuodian STATIC
         Weed10_H_Test/graph.cpp
         #十一周的已在上面生成add_executable
         Weed12_H_Test/arraylist_Test12.cpp
-        Weed13_H_Test/BiTree13.cpp)
+        Weed13_H_Test/BiTree13.cpp
+        Weed14_H_Test/ArrayHash.cpp
+        Weed14_H_Test/Hash.cpp
+        Weed14_H_Test/LinkHash.cpp )
 target_include_directories(cliongongzuodian
         PUBLIC
         ${PROJECT_SOURCE_DIR}/include
@@ -53,6 +56,7 @@ add_executable(WeedTest
         #十一周的已在上面生成add_executable
         Weed12_Test/main.cpp
         Weed13_Test/main.cpp
+        Weed14_Test/main.cpp
         )
 #链接可执行文件和静态库
 #target_link_libraries(WeedTest2
